--- a/popup.css
+++ b/popup.css
@@ -62,3 +62,11 @@ header{
     justify-content: space-evenly;
     margin: 10px;
 }
+
+footer{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+}
