--- a/popup.css
+++ b/popup.css
@@ -1,72 +1,225 @@
-body {
-    background-color: #F5DEB3;
+
+
+.pair-container {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    font-family: 'Courier New', Courier, monospace;
-    width: 20rem;
-    height: 16rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+    padding: 0px;
+}
+
+:root {
+    --primary-item: #3B3E40;
+    --background-item: #EFEFEF;
+    --gray: #D5D4D5;
+    --background: #2C2C2C;
+    --item-non-hover: #92969A;
+    --background-body: #FCFCFC;
+}
+
+* {
+    font-size: 16px;
+    font-family: "Poppins", serif;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background: var(--background);
+    height: 100%;
+    justify-content: start;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.accordion-container {
+    top: 0;
+    min-width: 660px;
+    padding: 16px;
+    overflow: hidden;
+    background-color: var(--background-body);
+}
+
+.main-item {
+    border-radius: 8px;
+    padding: 12px;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: start;
+    gap: 8px;
+    transition: all ease-in-out 0.25s;
+    color: var(--item-non-hover);
+}
+
+input {
+    border-radius: 8px;
+    padding: 12px;
+    color: var(--item-non-hover);
+    font-size: large;
+}
+
+button {
+    border: none;
+    background-color: currentColor;
+    cursor: pointer;
+    border-radius: 8px;
+    padding: 8px;
+    color: var(--item-non-hover);
+    background-color: var(--background-body);
+    transition: all ease-in-out 0.25s;
+}
+
+button:hover {
+    color: var(--primary-item);
+    background-color: var(--background-item);
+    transition: all ease-in-out 0.25s;
+}
+
+
+header {
+    width: 100%;
+    border-radius: 8px;
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+    color: var(--item-non-hover);
 }
 
 section {
+    border-radius: 8px;
+    padding: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 10px;
-    border: 2px solid #8B4513;
-    padding: 15px;
-    background-color: #DEB887;
+    gap: 8px;
+    color: var(--item-non-hover);
 }
 
-div{
-    width: 100%;
+
+.main-item:hover {
+    background-color: var(--background-item);
+    color: var(--primary-item);
+}
+
+.main-item svg {
+    stroke: var(--item-non-hover);
+    transition: all ease-in-out 0.25s;
+}
+
+.main-item:hover svg {
+    stroke: var(--primary-item);
+}
+
+.main-item--open {
+    border-radius: 8px;
+    background-color: var(--background-item);
+    transition: all 200ms;
+    color: var(--primary-item);
+}
+
+.main-item--open:hover {
+    color: var(--primary-item);
+    border-radius: 8px;
+    background-color: var(--background-item);
+}
+
+.main-item--open svg {
+    stroke: var(--primary-item);
+}
+
+.accordion-container > ul {
+    max-height: 0;
+    list-style-type: none;
+    margin: 0;
+    padding-left: 14px;
+    opacity: 0;
+    font-size: smaller;
+    visibility: hidden;
+    transition: all ease-in-out 0.2s;
+}
+
+.main-item--open + ul {
+    visibility: visible;
+    max-height: 400px;
+    padding-left: 22px;
+    opacity: 1;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    margin: 10px;
+    flex-direction: column;
 }
 
-input{
-    margin: 5px;
-    font-size: x-large;
-    width: 7rem;
-    border-radius: 5px;
-    border: 2px solid #8B4513;
-    background-color: #F5F5DC;
+.accordion-container > ul > li {
+    height: 48px;
+    display: flex;
+    width: 100%;
+    align-items: center;
 }
 
-span{
-    font-size: x-large;
-    margin: 5px;
-    font-weight: bold;
-    color: #8B4513;
+.accordion-container > ul > li > a {
+    color: var(--item-non-hover);
+    padding: 16px 8px;
+    height: 38px;
+    line-height: 38px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    border-radius: 8px;
 }
 
-button{
-    margin: 5px;
-    font-size: x-large;
-    border-radius: 5px;
-    padding: 2%;
-    background-color: #8B4513;
-    color: #F5F5DC;
-    border: none;
+.accordion-container > ul > li:hover {
+    color: var(--primary-item);
     cursor: pointer;
+    font-weight: 700;
 }
 
-header{
+.accordion-container > ul > li:hover > a {
+    color: var(--primary-item);
+    background-color: var(--background-item);
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    margin: 10px;
 }
 
-footer{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: end;
+.expand-icon {
+    width: 24px;
+    height: 24px;
+    margin-left: auto;
+}
+
+.main-item--open > .expand-icon {
+transform: rotate(-90deg);
+}
+
+.line-vertical {
+display: block;
+background-color: var(--background-item);
+width: 2px;
+height: 48px;
+}
+
+.accordion-container > ul > 
+li:last-child > .line-vertical {
+    height: 25px;
+    align-self: flex-start;
+}
+
+.line-horizontal {
+display: block;
+background-color: var(--background-item);
+height: 2px;
+min-width: 12px;
+}
+
+.background-none {
+    background-color: var(--background-body)
+}
+
+.background-none:hover {
+    background-color: var(--background-body)
 }
