🚧 Work in Progress:  Body, Promedio Simple

--- a/refactor-react/src/App.css
+++ b/refactor-react/src/App.css
@@ -1,6 +1,10 @@
 :root {
   --hover-button-color: #f1eef1;
 }
+* {
+  font-size: 16px;
+  font-family: "Poppins", serif;
+}
 body {
   width: 740px;
   border-color: red;
